This in theory should work but needs review and testing